--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Josefin Sans', sans-serif;
+  Font-size: 18px;
+}
+
+h1 {
+  font-weight: 700;
+
 }
 
 article {
