--- a/src/components/Switch.css
+++ b/src/components/Switch.css
@@ -9,13 +9,20 @@ img {
   background-color: hsl(235, 21%, 11%);
   color: hsl(234, 39%, 85%);
 }
-/* switch controllers & input color */
-.InpContDark {
-  background-color: hsl(235, 24%, 19%);
-  color: hsl(234, 39%, 85%);
+.light {
+  background-color: hsl(236, 33%, 92%);
 }
 /* switch task color */
 .tasksDark {
+  background-color: hsl(235, 24%, 19%);
+  color: hsl(234, 39%, 85%);
+}
+.tasksLight {
+  background-color: white;
+  color: hsl(234, 39%, 85%);
+}
+/* switch controllers & input color */
+.InpContDark {
   background-color: hsl(235, 24%, 19%);
   color: hsl(234, 39%, 85%);
 }
