--- a/src/style.css
+++ b/src/style.css
@@ -7,9 +7,13 @@
   font-family: 'Josefin Sans', sans-serif;
   font-size: 18px;
 }
+body {
+  padding: 2.9em 1em;
+}
 
 h1 {
   font-weight: 700;
+  font-size: 27px;
 }
 ul {
   list-style-type: none;
@@ -24,7 +28,7 @@ li:hover {
 }
 header {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 main {
   display: flex;
