--- a/src/components/Controllers.css
+++ b/src/components/Controllers.css
@@ -8,11 +8,16 @@
 }
 /* all, active, completed */
 .allActCom {
-  position: fixed;
-  top: 87%;
-  right: 4%;
+  position: relative;
+  top: 90px;
   width: 332px;
   padding: 15px 20px;
   border-radius: 6px;
   margin-top: 5px;
+}
+
+@media screen and (min-width: 375px) {
+  .allActCom {
+    position: initial;
+  }
 }
